# sage

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  llms.txt  refactor_ui.py  scratch.rs  test_fetch.rs  test_scraper.rs
.github/workflows/: release.yml
docs/: index.html  robots.txt  sitemap.xml
scratch_test/: Cargo.toml  get_chapters.py  novelbuddy.html  novelbuddy_api.json  novelbuddy_book.html  novelfire.html  novelfire_book.html  novelfire_chapters.html  parse_json.py  parse_json2.py  parse_links.py
scratch_test/src/: main.rs
src/: app.rs  config.rs  db.rs  downloader.rs  error.rs  exporter.rs  freewebnovel.rs  main.rs  models.rs  multi_provider.rs  reader_settings.rs  scraper.rs  theme.rs  ui.rs
