[package]
name = "sage"
version = "1.0.1"
edition = "2024"
description = "An advanced TUI Web Novel Reader"
repository = "https://github.com/musprodev/sage"
homepage = "https://musprodev.github.io/sage/"
license = "MIT"
readme = "README.md"
keywords = ["tui", "novel-reader", "web-scraper", "terminal", "epub"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
async-trait = "0.1"
htmlescape = "0.3"
regex = "1.10"
serde_json = "1.0"
epub-builder = "0.7"
scraper = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
futures = "0.3"
url = "2.5"
primp = "1.3.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
